使用npm编译jsx格式转成javascript
Change-Id: I1ce91bc3cc1a8d644cf2e43a679c305d6eccc9e9
Signed-off-by: widebox <widebox@jelf-PC>

--- a/chat/index.html
+++ b/chat/index.html
@@ -103,11 +103,10 @@
 		</div>
 		<script src="js/react.min.js"></script>
 		<script src="js/react-dom.min.js"></script>
-		<script src="js/browser.min.js"></script>
 		<script src="js/jquery-2.2.2.min.js"></script>
 		<script src="js/remarkable.min.js"></script>
 
-		<script type="text/babel" src="js/react-friends.js"></script>
+		<script src="js/react-friends.js"></script>
 
 		<script src='js/velocity.js'></script>
 		<script src="js/index.js"></script>
