Change-Id: I2ab0045c1a5567a37f9c3c6f145fecc01f2c247a Signed-off-by: widebox <widebox@jelf-PC>

--- a/chat/index.html
+++ b/chat/index.html
@@ -96,7 +96,7 @@
 					</li>
 				</ul>
 				<div class="write-form">
-					<textarea placeholder="输入信息" class="form-control" rows="3" maxlength="255"></textarea>
+					<textarea id="text" placeholder="输入信息" class="form-control" rows="3" maxlength="255"></textarea>
 					<div class="btn-primary btn send">发送</div>
 				</div>
 			</div>
