Change-Id: I6684232f65d6b7a864a11ab9e0dc0c01246f34cb Signed-off-by: jelf <353742991@qq.com>

--- a/chat/index.html
+++ b/chat/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="css/animate.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/jquery.mCustomScrollbar.min.css" />
 	</head>
 
 	<body>
@@ -87,7 +88,7 @@
 						</div>
 						<div class="message">haha</div>
 					</li>
-					<li class="friend-with-a-SVAGina">
+					<li class="friend-message">
 						<div class="head">
 							<span class="name">用户1</span>
 							<span class="time">10:15 AM, Today</span>
@@ -101,15 +102,20 @@
 				</div>
 			</div>
 		</div>
+		<script>
+			var userId = "9a9c4f90-c720-4e1c-9ce5-30a33f0029bc";
+		</script>
 		<script src="js/react.min.js"></script>
 		<script src="js/react-dom.min.js"></script>
 		<script src="js/jquery-2.2.2.min.js"></script>
 		<script src="js/remarkable.min.js"></script>
-
+		<script src="js/jquery-migrate-1.2.1.min.js"></script>
+		<script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
 		<script src="js/react-friends.js"></script>
-
 		<script src='js/velocity.js'></script>
 		<script src="js/index.js"></script>
+		<script src="js/util.js"></script>
+		<script src="js/chatSocket.js"></script>
 	</body>
 
 </html>
